<resources>
    <string name="app_name">BookApp</string>
    <string name="title_home">Book</string>
    <string name="title_dashboard">Author</string>
    <string name="title_book_details">Book Details</string>
    <string name="title_notifications">Tag</string>
    <string name="title_book_add">Add a book</string>
    <string name="delete">Supprimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">No data found</string>
    <string name="authorSpinner">Select an author</string>
</resources>