<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.bookapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
    <action
            android:id="@+id/action_book_details"
            app:destination="@id/book_details" />
    </fragment>


    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.bookapp.ui.authors.AuthorFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_authors">
    <action
            android:id="@+id/action_author_details"
            app:destination="@id/author_details" />
    <action
            android:id="@+id/action_author_add"
            app:destination="@id/author_add" />
    <action
            android:id="@+id/action_return_home"
            app:destination="@id/navigation_dashboard" />


    </fragment>


    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.bookapp.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>

    <fragment
            android:id="@+id/book_details"
            android:name="com.example.bookapp.ui.home.BookDetailsFragment"
            android:label="@string/title_book_details"
            tools:layout="@layout/fragment_home"
    />
    <fragment
        android:id="@+id/book_add"
        android:name="com.example.bookapp.ui.home.BookAdd"
        android:label="@string/title_book_add"
        tools:layout="@layout/fragment_home"
        >
    <action
        android:id="@+id/action_book_add"
        app:destination="@id/book_add" />
    </fragment>
    <fragment
            android:id="@+id/author_details"
            android:name="com.example.bookapp.ui.authors.AuthorDetailsFragment"
            android:label="Author Details"
            tools:layout="@layout/fragment_authors"
    >
        <action
                android:id="@+id/action_book_details"
                app:destination="@id/book_details" />
    </fragment>

    <fragment
            android:id="@+id/author_add"
            android:name="com.example.bookapp.ui.authors.AuthorAdd"
            android:label="Author Add"
            tools:layout="@layout/fragment_home"
    >
    <action
            android:id="@+id/action_return_home"
            app:destination="@id/navigation_dashboard" />
    </fragment>

</navigation>